# funnybot

./: .gitignore  Procfile  README.md  main-temp.py  oi_biases.tsv  oi_daily_plot_functions.py  oi_responses.csv  oi_responses.tsv  only-images.py  pyproject.toml  requirements.txt
oi_discord_bot/: config.py  database.py  oi_utils.py  onlyimages.py  utils.py
oi_discord_bot/cogs/: Confessions.py  CumCry.py  DailyPlots.py  Later.py  Utils.py  WYR.py
oi_discord_bot/cogs/DailyPlots/: DailyPlots.py  oi_biases.tsv  oi_daily_plot_functions.py  oi_responses.csv  oi_responses.tsv
oi_discord_bot/sigma_clone/: gallows_core.py  generic_responses.py  hangman.py
