[tool.poetry]
name = "funnybot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^2.2.2"
APScheduler = "^3.10.1"
emojis = "^0.7.0"
matplotlib = "^3.7.1"
numba = "^0.56.4"
uvloop = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
